--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,54 +1,25 @@
 name: Deploy to Heroku
 
-on:
-  workflow_dispatch:
-    inputs:
-      HEROKU_APP_NAME:
-        description: 'Heroku App name'
-        required: true
-      HEROKU_API_KEY:
-        description: 'Heroku API key'
-        required: true
-      HEROKU_EMAIL:
-        description: 'Heroku email address'
-        required: true
-      BOT_TOKEN:
-        description: 'Telegram bot token'
-        required: true
-      OWNER_ID:
-        description: "Owner's telegram ID"
-        required: true
-      DATABASE_URL:
-        description: 'Database URL from MongoDB'
-        required: true
-      TELEGRAM_API:
-        description: 'Telegram API ID from https://my.telegram.org/'
-        required: true
-      TELEGRAM_HASH:
-        description: 'Telegram HASH from https://my.telegram.org/'
-        required: true
+on: workflow_dispatch
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout deploy branch
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12
         with:
-          ref: 'refs/heads/deploy'
-
-      - name: Deploy to Heroku
-        uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{inputs.HEROKU_API_KEY}}
-          heroku_app_name: ${{inputs.HEROKU_APP_NAME}}
-          heroku_email: ${{inputs.HEROKU_EMAIL}}
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
           usedocker: true
           docker_heroku_process_type: web
           stack: "container"
           region: "eu"
         env:
-          HD_OWNER_ID: ${{inputs.OWNER_ID}}
-          HD_TELEGRAM_API: ${{inputs.TELEGRAM_API}}
-          HD_TELEGRAM_HASH: ${{inputs.TELEGRAM_HASH}}
-          HD_DATABASE_URL: ${{inputs.DATABASE_URL}}
-          HD_BOT_TOKEN: ${{inputs.BOT_TOKEN}}
+          HD_OWNER_ID: ${{secrets.OWNER_ID}}
+          HD_TELEGRAM_API: ${{secrets.TELEGRAM_API}}
+          HD_TELEGRAM_HASH: ${{secrets.TELEGRAM_HASH}}
+          HD_DATABASE_URL: ${{secrets.DATABASE_URL}}
+          HD_BOT_TOKEN: ${{secrets.BOT_TOKEN}}
+          HD_CONFIG_FILE_URL: ${{secrets.CONFIG_FILE_URL}}
